Add all pages with styles

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,46 @@
         </div>
     </div>
     <!--Navigation Bar End-->
+    <!--main-->
+    <section class="about">
+        <div class="container">
+            <div class="caption">
+                <h1>About Ada Luxe</h1>
+                <p>Where Elegance Meets Innovation -</p>
+            </div>
+            <div class="content">
+                <div class="content__text">
+                    <div class="content__text__container">
+                        <h3>Ada Luxe is a symbol of modern luxury fashion, fusing timeless elegance with innovative
+                            design
+                            to create pieces that transcend trends.</h3>
+                        <p>Founded with a passion for redefining luxury fashion, Ada Luxe was born from a desire to
+                            blend
+                            traditional sophistication with contemporary flair. From our very first collection, we've
+                            sought
+                            to push the boundaries, crafting apparel that resonates with the modern, fashion-forward
+                            woman.
+                        </p>
+                    </div>
+                    <div class="content__text__container">
+                        <h3>Our Mission -</h3>
+                        <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
+                            quality, and elegance. We strive to inspire confidence and individuality in every wear.
+                        </p>
+                    </div>
+                    <div class="content__text__container">
+                        <h3>Our Vision -</h3>
+                        <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
+                            quality, and elegance. We strive to inspire confidence and individuality in every wear.
+                        </p>
+                    </div>
+                </div>
+                <img class="content__image" src="../images/about.png" alt="studio">
+            </div>
+        </div>
+    </section>
 
+    <!--main end-->
     <!--Footer-->
     <footer>
         <div class="navigations">
@@ -97,5 +136,7 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
     <!--Footer End-->
+
+    <script src="../main.js"></script>
 </body>
 </html>
