--- a/pages/collection.html
+++ b/pages/collection.html
@@ -154,5 +154,7 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
     <!--Footer End-->
+
+    <script src="../main.js"></script>
 </body>
 </html>
