--- a/pages/parfume.html
+++ b/pages/parfume.html
@@ -45,7 +45,135 @@
         </div>
     </div>
     <!--Navigation Bar End-->
+    <!--Main-->
+    <main class="jewellerymain">
+        <div class="container">
+            <div class="container__content">
+                <h1>Parfume</h1>
+            </div>
+            <ul class="container__gallery">
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/1.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Mystic Dawn</h3>
+                            <span class="price">$75</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/2.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Eternal Blossom</h3>
+                            <span class="price">$90</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/3.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Velvet Twilight</h3>
+                            <span class="price">$65</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/4.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Amber Whispers</h3>
+                            <span class="price">$80</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/5.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Celestial Harmony</h3>
+                            <span class="price">$85</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/6.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Radiant Mirage</h3>
+                            <span class="price">$70</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/7.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Moonlit Serenade</h3>
+                            <span class="price">$95</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/8.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Golden Enchantment</h3>
+                            <span class="price">$88</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/parfume/9.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Sapphire Mist</h3>
+                            <span class="price">$78</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+            </ul>
 
+        </div>
+    </main>
+    <!--Main end-->
     <!--Footer-->
     <footer>
         <div class="navigations">
@@ -97,5 +225,7 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
     <!--Footer End-->
+
+    <script src="../main.js"></script>
 </body>
 </html>
