--- a/pages/watchmaking.html
+++ b/pages/watchmaking.html
@@ -45,7 +45,135 @@
         </div>
     </div>
     <!--Navigation Bar End-->
+    <!--Main-->
+    <main class="jewellerymain">
+        <div class="container">
+            <div class="container__content">
+                <h1>Watchmaking</h1>
+            </div>
+            <ul class="container__gallery">
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w1.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Titanium Edge</h3>
+                            <span class="price">$250</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w2.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Midnight Chrono</h3>
+                            <span class="price">$375</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w3.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Aurora Pulse</h3>
+                            <span class="price">$310</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w4.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Regal Voyager</h3>
+                            <span class="price">$450</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w5.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Obsidian Timekeeper</h3>
+                            <span class="price">$295</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w6.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Celestial Orbit</h3>
+                            <span class="price">$420</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w7.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Stellar Nexus</h3>
+                            <span class="price">$340</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w8.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Golden Meridian</h3>
+                            <span class="price">$520</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+                <li class="product">
+                    <a href="">
+                        <img src="../images/watchmaking/w9.png" alt="jewellery photo">
+                        <div class="product__info">
+                            <h3>Eclipse Horizon</h3>
+                            <span class="price">$380</span>
+                        </div>
+                        <div class="product__buttons">
+                            <button>Add to cart</button>
+                            <button>Buy now</button>
+                        </div>
+                    </a>
+                </li>
+            </ul>
 
+        </div>
+    </main>
+    <!--Main End-->
     <!--Footer-->
     <footer>
         <div class="navigations">
@@ -97,5 +225,7 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
     <!--Footer End-->
+
+    <script src="../main.js"></script> 
 </body>
 </html>
