--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
             <ul class="navbar__links">
-                <li class="active">
+                <li>
                     <a href="/">Home</a>
                 </li>
                 <li>
@@ -78,7 +78,7 @@
                         embellishments is paired with a silky white satin skirt. A look that redefines sportswear
                         luxury.
                     </p>
-                    <button>Explore the Collection</button>
+                    <button onclick="redirectToCollection()">Explore the Collection</button>
                 </li>
                 <li class="post post2">
                     <img src="images/post2.png" alt="model">    
@@ -86,14 +86,14 @@
                     <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden
                         reflections. A
                         piece that epitomizes the bold spirit of modern fashion.p>
-                        <button>Explore the Collection</button>
+                        <button onclick="redirectToCollection()">Explore the Collection</button>
                 </li>
                 <li class="post post3">
                     <img src="images/post3.png" alt="model">
                     <h3>Monochrome Lace Enchantment</h3>
                     <p>A timeless creation of black and white lace, this dress weaves together classic elegance and
                         contemporary design. The embodiment of grace for the fashion-forward woman.</p>
-                    <button>Explore the Collection</button>
+                    <button onclick="redirectToCollection()">Explore the Collection</button>
                 </li>
             </ul>
         </div>
