--- a/pages/jewellery.html
+++ b/pages/jewellery.html
@@ -225,6 +225,8 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
     <!--Footer End-->
+
+    <script src="../main.js"></script>
 </body>
 
 </html>
